modal form ux and spacing fixes

--- a/src/modules/Modals/ModalForm/ModalForm.css
+++ b/src/modules/Modals/ModalForm/ModalForm.css
@@ -60,5 +60,5 @@
 
 .modal-close-button {
     margin-left: auto;
-    margin-right: -1.5rem;
+    margin-right: 0rem;
 }
